Fixing home hotspots z-index

--- a/app/components/DynamicHomeHeader.css
+++ b/app/components/DynamicHomeHeader.css
@@ -64,7 +64,7 @@
         margin-right: auto;
         left: 0;
         right: 0;
-        z-index: 10;
+        z-index: 9;
         animation: fadein 2s;
         -moz-animation: fadein 2s; /* Firefox */
         -webkit-animation: fadein 2s; /* Safari and Chrome */
